# gitlab-downloader

./: .gitignore  .gitmodules  README.MD  build.py  build_and_run.py
gitlab-downloader-documentation/: Tasks.md
gitlab-downloader-documentation/.obsidian/: workspace.json
gitlab-downloader-documentation/docs-vault/.obsidian/: community-plugins.json  workspace.json
gitlab-downloader-documentation/docs-vault/Excalidraw/: Drawing 2023-12-10 10.46.03.excalidraw.md
gitlab-downloader-sources/: CMakeLists.txt  build_and_run.py
gitlab-downloader-sources/core/: CMakeLists.txt
gitlab-downloader-sources/core/lib/DBLib/: CMakeLists.txt  db_manager.cpp  db_manager.hpp
gitlab-downloader-sources/core/lib/corelib/: CMakeLists.txt  artifact_info.hpp  corelib-export.hpp  gitlab_handler.cpp  gitlab_handler.hpp  main_table_model.cpp  main_table_model.hpp  reply_handler.cpp  reply_handler.hpp  reply_handler_interface.hpp  request_formatter.cpp  request_formatter.hpp
gitlab-downloader-sources/qml-impl/: CMakeLists.txt  main.cpp
gitlab-downloader-sources/qml-impl/qml/: TestModel.qml
gitlab-downloader-sources/src/app/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp
gitlab-downloader-sources/src/app/deprecated_widgets/: main_screen_widget.hpp
gitlab-downloader-sources/src/app/qml/: main.qml
gitlab-downloader-sources/src/app/widgets/: main_screen_widget.cpp  main_screen_widget.hpp
gitlab-downloader-sources/src/lib/DBLib/: CMakeLists.txt  db_manager.cpp  db_manager.hpp  dblib-export.hpp
gitlab-downloader-sources/test/: CMakeLists.txt
gitlab-downloader-sources/test/core-tests/: CMakeLists.txt  db_manager_tests.cpp  test_db_manager.cpp  test_reply_handler.cpp
gitlab-downloader-sources/widgets-impl/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp
gitlab-downloader-sources/widgets-impl/widgets/: main_screen_widget.cpp  main_screen_widget.hpp
src/app/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp
src/build-app-Desktop_Qt_5_15_2_MSVC2019_64bit-Release/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
src/build-app-Desktop_Qt_5_15_2_MSVC2019_64bit-Release/.cmake/api/v1/reply/: cache-v2-ec879372e45f5f46fcea.json  cmakeFiles-v1-9a8ffd27f8d93483bf7e.json  codemodel-v2-30ad7173937290c3e583.json  index-2023-12-08T21-13-44-0202.json  target-gitlab-downloader-Release-2a351e7e180d39bb94e4.json  target-gitlab-downloader_autogen-Release-906e6c0a656aac7d0db9.json  target-gitlab-downloader_autogen_timestamp_deps-Release-8aa2067ba5fcb6cae2a6.json
src/build-app-Desktop_Qt_5_15_2_MSVC2019_64bit-Release/.qtc_clangd/.cache/clangd/index/: WinUser.h.F8D91F74A8475DAE.idx  Windows.h.721B0EF4B11164F5.idx  cfloat.28A01C27EC10B44E.idx  climits.8DEDE0168EFDEBB7.idx  corecrt.h.650763E20117E559.idx  crtdefs.h.7B663262D4B0717E.idx  cstddef.33D098550FD62E1B.idx  cstdint.C191A8F466D9B517.idx  eh.h.1A5F01A1A0591FA5.idx  intrin.h.1876F7BE2EEC2787.idx  ios.61FA4B1FE2554FE3.idx  iosfwd.A78F55AE63F2C5FA.idx  istream.49CBA35B35B7E7A0.idx  limits.h.5C74A38BD4EE3B96.idx  main.cpp.FAED8741292CCA8B.idx  main_window.cpp.E912BA36419A6F1F.idx  main_window.hpp.A66B982B668CCAE9.idx  mmeapi.h.D55743BC3BB88F0C.idx  mmiscapi.h.A3A2529911DFBB96.idx  objidl.h.04C4559C9C93A240.idx  objidlbase.h.DD49830FB7F1FEB1.idx  oleidl.h.B0AA7FB9E003EF53.idx  ostream.9D24BFA868710452.idx  qalgorithms.h.AE6962D48D88AFF4.idx  qarraydata.h.AD968FC37BBA6853.idx  qbytearray.h.7A46483B5B997ABC.idx  qcontiguouscache.h.91CCA91F50B8EB5C.idx  qdebug.h.C6B1A5A5B69CFA9A.idx  qflags.h.15127D43F3CDCCD9.idx  qglobal.h.026F62E5FE5C8D0B.idx  qhash.h.14BF78A2B0A54222.idx  qiterator.h.596C4469EDF42A76.idx  qkeysequence.h.1FFF7EC299A40262.idx  qlist.h.E223BAC76B31BA87.idx  qlocale.h.7E4B43B491D4443D.idx  qmainwindow.h.845A7EF35F7274F4.idx  qmap.h.386F32625D578B34.idx  qmetatype.h.F137C428E4666513.idx  qobject.h.DBDC626E7515B38F.idx  qobjectdefs.h.560E44746539A36A.idx  (+28 more)
